<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.yodut.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_kalendar"
        android:name="com.example.yodut.ui.kalendar.FragmentKalendar"
        android:label="@string/menu_kalendar"
        tools:layout="@layout/fragment_kalendar" />

    <fragment
        android:id="@+id/nav_tugas"
        android:name="com.example.yodut.ui.tugas.FragmentTugas"
        android:label="@string/menu_tugas"
        tools:layout="@layout/fragment_tugas" />
</navigation>